test coding slightly tweaked